--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
    <header>
         <div class="header_top">
-            <img class="logo" src="./assets/Logo.png" alt="">
+            <img class="logo" src="./assets/dikke-akka-beer.gif" alt="">
             <nav>
                 <ul class="header_nav">
                     <li><a href="https://turbo.az/">Product</a></li>
@@ -39,28 +39,28 @@
         <div class="header_animation_container">
             <div class="shadow"></div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
             <div class="animation">
-                <img class="Presto" src="./assets/Logo copy.png" alt="">
-                <img class="Boldo" src="./assets/Logo (2).png" alt="">
+                <img class="Presto" src="./assets/dikke-akka-beer.gif" alt="">
+                <img class="Boldo" src="./assets/dikke-akka-beer.gif" alt="">
             </div>
         </div>
    </header>
